different dashboard implement

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.drawer-side a.active {
+  color: white;
+  background: #202020;
+}
+/* .drawer-side a {
+  background-color: transparent;
+} */
